force-app/main/default/objects/Encuesta__c/Encuesta__c.object-meta.xml
<CustomObject>
    <label>Encuesta</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Encuesta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>