force-app/main/default/objects/Encuesta__c/fields/AdvertinsingID__c.field-meta.xml
<CustomField>
    <fullName>AdvertinsingID__c</fullName>
    <label>AdvertinsingID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>