force-app/main/default/objects/Encuesta__c/fields/CantidadComentarios__c.field-meta.xml
<CustomField>
    <fullName>CantidadComentarios__c</fullName>
    <label>CantidadComentarios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>