force-app/main/default/objects/Encuesta__c/fields/CantidadOKs__c.field-meta.xml
<CustomField>
    <fullName>CantidadOKs__c</fullName>
    <label>CantidadOKs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>