force-app/main/default/objects/Encuesta__c/fields/CantidadPreguntas__c.field-meta.xml
<CustomField>
    <fullName>CantidadPreguntas__c</fullName>
    <label>CantidadPreguntas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>