force-app/main/default/objects/Encuesta__c/fields/Default_Survey__c.field-meta.xml
<CustomField>
    <fullName>Default_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Survey</label>
    <type>Checkbox</type>
</CustomField>