force-app/main/default/objects/Encuesta__c/fields/Number_Of_Answered_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Answered_Questions__c</fullName>
    <label>Number_Of_Answered_Questions</label>
    <summarizedField>User_Survey__c.Number_Of_Answered_Questions__c</summarizedField>
    <summaryForeignKey>User_Survey__c.Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>