force-app/main/default/objects/Encuesta__c/fields/Number_Of_Answering_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Answering_Users__c</fullName>
    <label>Number_Of_Answering_Users</label>
    <summaryForeignKey>User_Survey__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>