force-app/main/default/objects/Encuesta__c/fields/Number_Of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Questions__c</fullName>
    <label>Number Of Questions</label>
    <summaryForeignKey>Survey_Question__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>