force-app/main/default/objects/Encuesta__c/fields/Number_of_Questions_VIew__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions_VIew__c</fullName>
    <label>Number of Questions (VIew)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>