force-app/main/default/objects/Encuesta__c/fields/TituloEncuesta__c.field-meta.xml
<CustomField>
    <fullName>TituloEncuesta__c</fullName>
    <label>TituloEncuesta</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>