force-app/main/default/objects/Encuesta__c/fields/TypeformId__c.field-meta.xml
<CustomField>
    <fullName>TypeformId__c</fullName>
    <externalId>true</externalId>
    <label>TypeformId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>