force-app/main/default/objects/Encuesta__c/fields/TypeformResultsId__c.field-meta.xml
<CustomField>
    <fullName>TypeformResultsId__c</fullName>
    <externalId>true</externalId>
    <label>TypeformResultsId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>