force-app/main/default/objects/Encuesta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TituloEncuesta__c</columns>
    <columns>Slug__c</columns>
    <columns>TypeformId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>TypeformResultsId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>